--- a/202308-nuclear-wastewater-event/manifest.json
+++ b/202308-nuclear-wastewater-event/manifest.json
@@ -10,7 +10,7 @@
   ],
   "id": "ilovexjp-jkb-simulator",
   "start_url": ".",
-  "display": "standalone",
+  "display": "fullscreen",
   "scope": "/",
   "description": "北京健康宝模拟"
 }
